[gd_scene load_steps=12 format=2]

[ext_resource path="res://framework/resources/shapes/8/semi_square_8.png" type="Texture2D" id=1]
[ext_resource path="res://game/shooter.gd" type="Script" id=2]
[ext_resource path="res://framework/node_modules/squasher/Squasher.tscn" type="PackedScene" id=3]
[ext_resource path="res://framework/node_modules/audio_players/detachable_audio_player/DetachableAudioPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/shooter_spawn_01.wav" type="AudioStream" id=5]
[ext_resource path="res://game/shooter_shoot_01.wav" type="AudioStream" id=6]
[ext_resource path="res://game/shooter_lock_01.wav" type="AudioStream" id=7]
[ext_resource path="res://game/line_texture.png" type="Texture2D" id=8]
[ext_resource path="res://game/bullet_shoot_02.wav" type="AudioStream" id=9]
[ext_resource path="res://framework/node_modules/drop_shadow/DropShadow.tscn" type="PackedScene" id=10]
[ext_resource path="res://game/line_texture_2.png" type="Texture2D" id=11]

[node name="Shooter" type="Node2D"]
script = ExtResource( 2 )
shot_count = 4
lock_duration = 0.4
bullet_speed = 500.0
last_timer_duration = 1.0

[node name="TargetLines" type="Node2D" parent="."]

[node name="DropShadow" parent="." instance=ExtResource( 10 )]
show_behind_parent = true
target = NodePath("../Sprite2D")
shadow_offset = Vector2( 2, 2 )
copy_scale = true

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color( 0.909804, 0.717647, 0.588235, 1 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Squasher" parent="." instance=ExtResource( 3 )]
target = NodePath("../Sprite2D")
squash_vector = Vector2( 1.75, 0.25 )
squash_duration = 0.15
stretch_vector = Vector2( 0.25, 1.75 )

[node name="LastTimer" type="Timer" parent="."]
one_shot = true

[node name="SpawnSound" parent="." instance=ExtResource( 4 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="SpawnSound/RandomAudioPlayer" index="0"]
stream = ExtResource( 5 )
bus = "Game"

[node name="LockSound" parent="." instance=ExtResource( 4 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="LockSound/RandomAudioPlayer" index="0"]
stream = ExtResource( 7 )
bus = "Game"

[node name="ShootSound" parent="." instance=ExtResource( 4 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ShootSound/RandomAudioPlayer" index="0"]
stream = ExtResource( 6 )
bus = "Game"

[node name="ShootSound2" parent="." instance=ExtResource( 4 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ShootSound2/RandomAudioPlayer" index="0"]
stream = ExtResource( 9 )
bus = "Game"

[node name="Cont" type="Node2D" parent="."]

[node name="Line2D" type="Line2D" parent="Cont"]
visible = false
points = PackedVector2Array( 0, 0, 100, -50 )
width = 2.0
default_color = Color( 1, 1, 1, 0.443137 )
texture = ExtResource( 8 )
texture_mode = 1
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2D2" type="Line2D" parent="Cont"]
visible = false
points = PackedVector2Array( 0, 0, 100, -50 )
width = 2.0
default_color = Color( 1, 1, 1, 0.443137 )
texture = ExtResource( 11 )
texture_mode = 1
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2

[node name="LineMoveTimer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="LineMoveTimer" to="." method="_on_LineMoveTimer_timeout"]

[editable path="SpawnSound"]
[editable path="SpawnSound/RandomAudioPlayer"]
[editable path="LockSound"]
[editable path="LockSound/RandomAudioPlayer"]
[editable path="ShootSound"]
[editable path="ShootSound/RandomAudioPlayer"]
[editable path="ShootSound2"]
[editable path="ShootSound2/RandomAudioPlayer"]
